--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <body>
-    <canvas id="canvas" width="500" height="500"></canvas>
+    <canvas id="canvas" width="700" height="700"></canvas>
+    <div>
+        <span>Infected: </span>
+        <span id="infectedCount"></span>
+    </div>
+
+    <div>
+        <span>Healthy: </span>
+        <span id="healthyCount"></span>
+    </div>
+
+    <div>
+        <span>Turns: </span>
+        <span id="turnCount"></span>
+    </div>
+
 
     <script src="bundle.js"></script>
 </body>
