add sliders for starting values (and restarting simulation)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <span id="turnCount"></span>
     </div>
 
+    <div class="slidecontainer">
+        <input type="range" min="0" max="1000" value="500" class="slider" id="healthySlider">
+    </div>
+
+    <div class="slidecontainer">
+        <input type="range" min="0" max="1000" value="100" class="slider" id="infectedSlider">
+    </div>
+
+    <div class="slidecontainer">
+        <input type="range" min="0" max="500" value="10" class="slider" id="medicSlider">
+    </div>
 
     <script src="bundle.js"></script>
 </body>
